# julio

./: .dockerignore  Dockerfile  README.md  agent.db  agent.json  agent.py  bus.py  config.py  demo_service.py  main.py  mcp_manager.py  persistence.py  pyproject.toml  requirements.txt  skills-lock.json  skills_loader.py  test_bus.py  test_config.py  test_persistence.py  test_run_shell.py  test_skills.py  test_tools.py  tools_internal.py
.agents/skills/adk-cheatsheet/: SKILL.md
.agents/skills/adk-deploy-guide/: SKILL.md
.agents/skills/adk-dev-guide/: SKILL.md
.agents/skills/adk-eval-guide/: SKILL.md
.agents/skills/adk-observability-guide/: SKILL.md
.agents/skills/adk-scaffold/: SKILL.md
.github/: dependabot.yml
.github/workflows/: docker-build.yml
scripts/: benchmark.py  benchmark_bus.py  benchmark_bus_real.py  benchmark_bus_tasks.py  benchmark_bus_tasks_no_deps.py  benchmark_persistence_json.py
scripts/performance/: benchmark_bus_v2.py  benchmark_skills_loader.py  benchmark_spawn_cleanup.py  standalone_json_perf.py
skills/test-skill/: SKILL.md  resource.txt
src/julio/: agent.py  bus.py  config.py  main.py  mcp_manager.py  persistence.py  skills_loader.py  tools_internal.py
tests/: mock_mcp_server.py  test_bus_bounded.py  test_bus_robust.py  test_bus_unittest.py  test_complex.py  test_core.py  test_input_detection.py  test_mcp_integration.py  test_mcp_manager.py  test_mcp_manager_edge.py  test_persistence_robust.py  test_service.py  test_service_integration.py  test_skills_loader.py  test_skills_robust.py  test_tools_robust.py
(+7 files in other folders)
