[project]
name = "persistent-agent-service"
version = "0.1.0"
description = "Persistent Agent Service with ADK and MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "google-adk>=1.23.0",
    "google-genai>=1.61.0",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "watchdog>=6.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "coverage>=7.13.3",
    "fakeredis>=2.33.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
